<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="308dp"
        android:layout_height="162dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/walmartlogo" />

    <TextView
        android:id="@+id/lbl_signIn"
        android:layout_width="284dp"
        android:layout_height="38dp"
        android:layout_marginTop="28dp"
        android:text="@string/lbl_signIn"
        android:textAlignment="center"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="340dp"
        android:layout_height="438dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/constlayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_signIn">

        <TextView
            android:id="@+id/lbl_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/lbl_email"
            app:layout_constraintStart_toStartOf="@+id/etxt_email"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etxt_email"
            android:layout_width="244dp"
            android:layout_height="43dp"
            android:paddingLeft="10dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/constlayout"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/lbl_pass"
            app:layout_constraintTop_toBottomOf="@+id/lbl_email" />

        <EditText
            android:id="@+id/etxt_pass"
            android:layout_width="244dp"
            android:layout_height="43dp"
            android:paddingLeft="10dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/constlayout"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_pass" />

        <TextView
            android:id="@+id/lbl_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/lbl_pass"
            app:layout_constraintStart_toStartOf="@+id/etxt_pass"
            app:layout_constraintTop_toBottomOf="@+id/etxt_email" />

        <TextView
            android:id="@+id/lbl_forgotpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autoLink="all"
            android:clickable="true"
            android:onClick="forgetPass"
            android:text="@string/lbl_forgotpass"

            app:layout_constraintEnd_toEndOf="@+id/etxt_pass"
            app:layout_constraintTop_toBottomOf="@+id/etxt_pass" />

        <Button
            android:id="@+id/btn_signIn"
            android:layout_width="264dp"
            android:layout_height="51dp"
            android:layout_marginTop="24dp"
            android:text="@string/btn_signIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_forgotpass" />

        <TextView
            android:id="@+id/lbl_donthaveacc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/lbl_donthaveacc"
            android:textSize="17dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_signIn" />

        <Button
            android:id="@+id/btn_newAcc"
            android:layout_width="264dp"
            android:layout_height="51dp"
            android:layout_marginTop="17dp"
            android:backgroundTint="@color/white"
            android:text="@string/btn_newAcc"
            android:textColor="#FF16236C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_donthaveacc" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>